long-press test

--- a/css/cloud.css
+++ b/css/cloud.css
@@ -21,15 +21,11 @@
     padding-top: 60px;
     transition: 0.5s;
 } 
-.sidenav a {
-    padding: 8px 8px 8px 20px;
-    text-decoration: none;
-    font-size: 25px;
+.sidenav .navClick {
     color: #818181;
-    display: block;
-    transition: 0.3s;
+    text-decoration: none;
 }
-.sidenav a:hover {
+.sidenav .navClick:hover {
     color: #f1f1f1;
 }
 .sidenav .closebtn {
@@ -38,6 +34,21 @@
     right: 25px;
     font-size: 36px;
     margin-left: 50px;
+}
+.sidenav .navLogout {
+    display: inline-block;
+    color: rgb(190, 52, 52);
+    font-size: 20px;
+    text-decoration: none;
+    transition: 0.3s;
+    text-align: right;
+    position: absolute;
+    bottom: 10px;
+    right: 20px;
+    line-height: 40px;
+}
+.sidenav .navLogout:hover {
+    color: red;
 }
 .navText {
     padding: 8px 8px 8px 20px;
